--- a/src/components/Base/Icon/Icon.css
+++ b/src/components/Base/Icon/Icon.css
@@ -1,6 +1,5 @@
 @layer components {
   .icon {
-    align-items: center;
     display: inline-flex;
     font-feature-settings: 'liga';
     justify-content: center;
